4 files modified, 5 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <div>teste</div>
+
+<app-card></app-card>
+
+<app-butao
+  (clicked)="onButtonClick()"
+  [classe]="'btn btn-primary'"
+  [nome]="'Teste'"
+></app-butao>
