--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
 
 <app-butao
   (clicked)="onButtonClick()"
-  [classe]="'btn btn-primary'"
   [nome]="'Teste'"
+  [cor]="'danger'"
+  [outline]="true"
+  [size]="'big'"
 ></app-butao>
