--- a/src/app/butao/butao.component.html
+++ b/src/app/butao/butao.component.html
@@ -1,3 +1,9 @@
-<button (click)="clicked.emit()" type="button" class="{{ classe }}">
+<button
+  (click)="clicked.emit()"
+  type="button"
+  class="btn btn-{{ outline == true ? 'outline-' : '' }}{{ cor }} {{
+    getsizeButtonSize()
+  }}"
+>
   {{ nome }}
 </button>
