--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
   [cor]="'danger'"
   [outline]="true"
   [size]="'big'"
+  [badge]="'9'"
+  [corBadge]="'danger'"
+  [cornerBadge]="true"
 ></app-butao>
