--- a/src/app/butao/butao.component.html
+++ b/src/app/butao/butao.component.html
@@ -3,7 +3,10 @@
   type="button"
   class="btn btn-{{ outline == true ? 'outline-' : '' }}{{ cor }} {{
     getsizeButtonSize()
-  }}"
+  }} {{ cornerBadge ? 'position-relative' : '' }}"
 >
   {{ nome }}
+  <span *ngIf="badge" class="{{ getCornerBadge() }} bg-{{ corBadge }}">{{
+    badge
+  }}</span>
 </button>
