4 files modified, 3 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
-<div>teste</div>
-
-<app-card></app-card>
-
 <app-butao
   (clicked)="onButtonClick()"
-  [nome]="'Teste'"
   [cor]="'danger'"
   [outline]="true"
   [size]="'big'"
   [badge]="'9'"
   [corBadge]="'danger'"
   [cornerBadge]="true"
-></app-butao>
+  >Boa</app-butao
+>
+<app-alerta [cor]="'secondary'">Teste 123</app-alerta>
