--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
   [badge]="'9'"
   [corBadge]="'danger'"
   [cornerBadge]="true"
-  >Boa</app-butao
+  >Show live</app-butao
 >
 <app-alerta [cor]="'secondary'">Teste 123</app-alerta>
